Add missing data file

--- a/files/dvc.yaml
+++ b/files/dvc.yaml
@@ -8,6 +8,7 @@ stages:
     - GNormPlusServer.jar
     - biobert_ner_models.zip
     - crfpp-0.58.tar.gz
+    - data.zip
     - resources.zip
     - sqlite-jdbc-3.20.0.jar
     - stanford-corenlp-3.5.2.jar
